examples/test/testpolicy14419.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14419
  namespace: namespace106
spec:
  podSelector:
    matchLabels:
      key23: value11
      key41: value26
      key47: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value9
          key20: value7
          key22: value28
